--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 FOUNDRY_COMMIT=3b1129b5bc43ba22a9bcf4e4323c5a9df0023140
 OP_COMMIT=0f07717bf06c2278bbccc9c62cad30731beeb322
 
-RPC_URL=http://127.0.0.1:8545
+RPC_URL=https://mainnet.base.org
 BASE_MAINNET_URL=https://developer-access-mainnet.base.org
 
 # DeployExtendedOptimismMintableToken configuration
@@ -10,10 +10,10 @@ ADMIN=TODO
 PAUSER=TODO
 BLACKLISTER=TODO
 DEFAULT_ROLE_ADMIN=TODO
-REMOTE_TOKEN=TODO
-NAME="TODO"
-SYMBOL="TODO"
-DECIMALS=TODO
+REMOTE_TOKEN=0xF47245e9A3Ba3dCa8B004E34afc1290B1d435a52
+NAME="MAGICAL BLOCKS"
+SYMBOL="$MBLK"
+DECIMALS=18
 
 # UpgradeableOptimismMintableERC20 to ExtendedOptimismMintableToken upgrade configuration
 NEW_IMPLEMENTATION_ADDRESS=TODO
